# NoXS

./: .gitignore  Cargo.toml  Package.resolved  Package.swift  README.md  build_install  build_install_linux  g  rust_build_install  rustfmt.toml  swift_build_install_macos  test.enc
Sources/CLI/: Build.swift  DataExt.swift  main.swift
Sources/Lib/: NoXS.swift
Sources/Test/: Test.swift
src/: lib.rs  main.rs  noxs.rs
tests/: example.rs  tests.rs
