[package]
name = "noxs"
version = "1.2.4"
edition = "2021"
description = "A library for authenticated encryption (ChaCha20-Poly1305) with password-based key derivation (Argon2id)"
readme = "README.md"
homepage = "https://raidshift.com"
repository = "https://github.com/raidshift/NoXS"
license = "MIT"

[dependencies]
hex = "0.4.3"
rand_core = { version = "0.9.3", features = ["os_rng"] }
rand_chacha = "0.9.0"
argon2-kdf = "1.5.4"
chacha20poly1305 = "0.10.1"
rpassword = "7.3.1"
base64 = "0.22.1"
zeroize = "1.8.1"

[profile.release]
panic = 'abort'
opt-level = 3
